demo added, key actions, wait improved

--- a/src/assets/bar.css
+++ b/src/assets/bar.css
@@ -66,3 +66,4 @@
 #recordBar .mouse::before { content: "\e852"; }
 #recordBar .keys::before { content: "\e837"; }
 #recordBar .see::before { content: "\e81b"; }
+#recordBar .wait::before { content: "\e85f"; }
